--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,21 +1,45 @@
-# ASP.NET
-# Build and test ASP.NET projects.
-# Add steps that publish symbols, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/apps/aspnet/build-aspnet-4
-
 trigger:
 - main
 
 pool:
-  vmimage: ubuntu-latest
+  name: azure pipelines
 
-variables:
-  buildConfiguration: 'Release'
+Variables:
+  BUildconfigurations: releases
 
 steps:
- - task: VSBuild@1
-   inputs:
-    solution: '$(solution)'
-    msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="$(build.artifactStagingDirectory)"'
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
+- task: usedotnet@2
+  displayname: use .net sdk 6.1
+  inputs:
+    package type: sdk
+    version: 6.x
+
+-  task: npm@01
+   displayname:
+   inputs: run npm install
+     verbose: false
+
+- script: './node_modules/bin/node_saas Tailspin.spacegame.web/wwwroot --output Tailspin.spacegame.web/wwwroot'
+  displayname: 'compile saas assets'
+
+- task: gulp@01
+  displayname: 'run gulp tasks'
+
+-script: 'echo "$(build.definitionname), $(build.id), $(build.buildnumber)" > buildinfo.text'
+   displayname: 'write build info'
+   Workingdirectory: 'Tailspin.spaceweb.game/wwwroot'
+
+-  task: dotnetcorecli@2
+   displayname: 'restore project dependencies'
+   inputs: 
+     commands: 'restore'
+     projects: '**/*.csproj'
+
+-  task: dotnetcorecli@2
+   displayname: 'build project'
+   inputs: 
+     commands: 'build'
+     arguments: '--no-restore --configuration release'
+     projects: '**/*.csproj'   
+
+    
