--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,7 @@ pool:
   name: azure pipelines
 
 Variables:
-  BUildconfigurations: releases
+  Buildconfiguration: 'releases'
 
 steps:
 - task: usedotnet@2
