--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ steps:
 -  task: npm@01
    displayname:
    inputs: run npm install
-     verbose: false
+     verbose: #false
 
 - script: './node_modules/bin/node_saas Tailspin.spacegame.web/wwwroot --output Tailspin.spacegame.web/wwwroot'
   displayname: 'compile saas assets'
