--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,8 +21,8 @@ steps:
 - task: gulp@01
   displayname: 'run gulp tasks'
 
--script: 'echo "$(build.definitionname), $(build.id), $(build.buildnumber)" > buildinfo.text'
-   displayname: 'write build info'
+- script: 'echo "$(build.definitionname), $(build.id), $(build.buildnumber)" > buildinfo.text'
+   displayname: 'build'
    Workingdirectory: 'Tailspin.spaceweb.game/wwwroot'
 
 -  task: dotnetcorecli@2
